--- a/ThugzBCfor53.uplugin
+++ b/ThugzBCfor53.uplugin
@@ -2,13 +2,13 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "ThugzBCfor53",
+	"FriendlyName": "Thugz Blockchain",
 	"Description": "Interact with the BlockChain in your web 3 games",
 	"Category": "Other",
 	"CreatedBy": "Thugz Labs SAS",
 	"CreatedByURL": "https://www.thugz.life/",
 	"DocsURL": "",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/6ff5398dba6341ac94b8a0fd56cbce1b\"",
 	"SupportURL": "",
 	"EngineVersion": "5.3.0",
 	"CanContainContent": true,
