--- a/ThugzBCfor53.uplugin
+++ b/ThugzBCfor53.uplugin
@@ -6,13 +6,12 @@
 	"Description": "Interact with the BlockChain in your web 3 games",
 	"Category": "Other",
 	"CreatedBy": "Thugz Labs SAS",
-	"CreatedByURL": "https://www.thugz.life/",
+	"CreatedByURL": "https://thugz-labs.com",
 	"DocsURL": "",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/6ff5398dba6341ac94b8a0fd56cbce1b",
 	"SupportURL": "",
 	"EngineVersion": "5.3.0",
 	"CanContainContent": true,
-	"IsBetaVersion": true,
 	"Installed": true,
 	"Modules": [
 		{
@@ -22,7 +21,6 @@
 			"PlatformAllowList": [
 				"Win64",
 				"Android",
-				"IOS",
 				"Linux"
 			]
 		}
