--- a/ThugzBCfor53.uplugin
+++ b/ThugzBCfor53.uplugin
@@ -12,6 +12,7 @@
 	"SupportURL": "",
 	"EngineVersion": "5.3.0",
 	"CanContainContent": true,
+	"IsBetaVersion": false,
 	"Installed": true,
 	"Modules": [
 		{
@@ -26,5 +27,6 @@
 				"IOS"
 			]
 		}
-	]
+	],
+	"IsExperimentalVersion": false
 }
